--- a/projectsite/templates/includes/form.html
+++ b/projectsite/templates/includes/form.html
@@ -6,7 +6,7 @@
         <p{% if forloop.last %} class="mb-0"{% endif %}>{{ error }}</p>
         {% endfor %}
     </div>
-{%e endif %}
+{% endif %}
 
 {% for field in form %}
 
