--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -180,9 +180,9 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href="forms.html">
+							<a href="{% url 'mem-list' %}">
 								<i class="la la-keyboard-o"></i>
-								<p>Members</p>
+								<p>Org. Members</p>
 							</a>
 						</li>
 						<li class="nav-item">
