--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -180,7 +180,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href="{% url 'mem-list' %}">
+							<a href="{% url 'member-list' %}">
 								<i class="la la-keyboard-o"></i>
 								<p>Org. Members</p>
 							</a>
