--- a/projectsite/templates/member_del.html
+++ b/projectsite/templates/member_del.html
@@ -5,7 +5,7 @@
         <div class="col-md-12">
             <div class="card">
                 <div class="card-header">
-                    <div class="card-title">Delete Organization Member</div>
+                    <div class="card-title">Delete Organization</div>
                     <div class="card-category">Page Subtitle</div>
                 </div>
 
