--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -186,7 +186,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href="tables.html">
+							<a href="{% url 'student-list' %}">
 								<i class="la la-th"></i>
 								<p>Student</p>
 							</a>
@@ -200,7 +200,7 @@
 						<li class="nav-item active">
 							<a href="typography.html">
 								<i class="la la-font"></i>
-								<p>Typography</p>
+								<p>Program</p>
 								<span class="badge badge-danger">25</span>
 							</a>
 						</li>
